DEFS =
DEFAULT_INCLUDES =

EXTRA_DIST = anonymous_struct.c anonymous_struct.cpp bool.cpp byteorder.c char_size.cpp const.cpp cross.c cross++.cpp double.cpp float.cpp floating.h float_word_order.cpp inline.c inline.cpp int_size.cpp ipv6.c largefile.c long_double.cpp long_long_size.cpp long_size.cpp mbrtowc.c mbsrtowcs.c memchr.c memcmp.c memcpy.c memmove.c memset.c nanosleep.c pointer_size.cpp pthread.c pthread_rwlock.c pthread_semaphore.c pthread_yield.c regex.c restrict.cpp specification.cpp short_size.cpp socklen_t.c static_const.c static_const.cpp stdc++.cpp unsigned_char.cpp wide.c
