DEFS =
DEFAULT_INCLUDES =

EXTRA_DIST = \
  static.sh \
  i386-unknown-cygwin \
  i386-unknown-linux-gnu \
  i386-unknown-mingw32 \
  i486-unknown-cygwin \
  i486-unknown-linux-gnu \
  i486-unknown-mingw32 \
  i586-unknown-cygwin \
  i586-unknown-linux-gnu \
  i586-unknown-mingw32 \
  i686-unknown-cygwin \
  i686-unknown-linux-gnu \
  i686-unknown-mingw32 \
  ia64-unknown-linux-gnu \
  mips-sgi-irix65 \
  sparc-sun-solaris2.7 \
  sparc-sun-solaris2.8 \
  sparc-sun-solaris2.9 \
  sparcv9-sun-solaris2 \
  sparcv9-sun-solaris2.8 \
  sparcv9-sun-solaris2.9
